Bug 159689 - Exporting glyphs to PDF produces validation warnings in VeraPDF
Summary: Exporting glyphs to PDF produces validation warnings in VeraPDF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-12 11:39 UTC by Mike Kaganski
Modified: 2024-02-13 09:20 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A droplet character (368 bytes, application/vnd.oasis.opendocument.text)
2024-02-12 11:39 UTC, Mike Kaganski
Details
VeraPDF PDF/A-3b validation report (22.05 KB, text/html)
2024-02-12 11:40 UTC, Mike Kaganski
Details
PDF/A-1b export validation report (24.14 KB, text/html)
2024-02-12 11:59 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-02-12 11:39:07 UTC
Created attachment 192518 [details]
A droplet character

Open the attachment, and export to PDF/A-3b.
Try to verify the resulting PDF using VeraPDF [1].

The result is a "PDF file is not compliant with Validation Profile requirements" warning.

[1] https://verapdf.org/software/
Comment 1 Mike Kaganski 2024-02-12 11:40:33 UTC
Created attachment 192519 [details]
VeraPDF PDF/A-3b validation report
Comment 2 Mike Kaganski 2024-02-12 11:51:25 UTC
https://gerrit.libreoffice.org/c/core/+/163185
Comment 3 Mike Kaganski 2024-02-12 11:59:48 UTC Comment hidden (obsolete)
Comment 4 Commit Notification 2024-02-13 04:09:57 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5121c1f8a3dc1e326a4195393f463f5c0383859b

tdf#159689: trailing newline before "endstream" must not count in Length

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-02-13 09:20:33 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6d87919d0e3a3e0c5febda19cd30da73813f0965

tdf#159689: trailing newline before "endstream" must not count in Length

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.