tdf#159689: trailing newline before "endstream" must not count in Length

Change-Id: Ic1e636c9d4e5a531113f26e147427fb75ce3591c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163185
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 5121c1f8a3dc1e326a4195393f463f5c0383859b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163281
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>